# knowitjul2019

10/: 10.h  10.l  10.y  2019 Luke 10.md
11/: 11-orig.S  11.S  2019 Luke 11.md  test.txt
12/: 12.S  12.apl  12.c  2019 Luke 12.md
13/: Cargo.toml
13/src/: main.rs
17/: 17.c
18/: 18.js  employees.json  employees2json.sh  names.json
19/: 19.js
2/: 2.js  2019 Luke 2.md
3/: 2019 Luke 3.md  3.sh
4/: 2019 Luke 4.md  4.c  coordinates.c  coordinates_test.c  coords2c.sh
5/: 5.c  list.c  list_test.c
6/: 2019 Luke 6.md  6.c  mush.ppm
7/: 7.c
8/: 2019 Luke 8.md  8.c
9/: 2019 Luke 9.md  9.S  9.py
