[package]
name = "luke13"
version = "0.1.0"
authors = ["Ricardo Iván Vieitez Parra <ricardo.i.v.parra@ntnu.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.44"
serde_derive = "1.0.103"
serde = "1.0.103"
queues = "1.1.0"
